--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
   "extends": ["airbnb"],
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
+  },
+  "rules": {
+    "no-param-reassign": 0,
+    "no-void": 0
   }
 }
