--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled 
-dist/*
+# dist/*
 
 # Dependency directories
 node_modules/
@@ -59,3 +59,6 @@ typings/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
+
+# ignore vscode
+.vscode/
