--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jest": "^23.6.0",
     "npm": "^6.5.0",
     "rollup": "^0.67.4",
-    "rollup-plugin-server": "^0.7.0"
+    "rollup-plugin-server": "^0.7.0",
+    "rollup-plugin-uglify": "^6.0.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development rollup -c ./build/rollup.config.js --watch",
