--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "dist/index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
-    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "install": "^0.12.2",
     "jest": "^23.6.0",
-    "npm": "^6.5.0",
     "rollup": "^0.67.4",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-server": "^0.7.0",
     "rollup-plugin-uglify": "^6.0.1"
   },
@@ -30,7 +31,7 @@
     "type": "git",
     "url": "git+https://github.com/mitkaaa/embla.git"
   },
-  "author": "",
+  "author": "Dmitry Kuznetsov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mitkaaa/embla/issues"
