--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development rollup -c ./build/rollup.config.js --watch",
     "build": "cross-env NODE_ENV=production rollup -c ./build/rollup.config.js",
+    "lint": "eslint --ext .js,.jsx --quiet .",
     "test": "jest",
     "test:watch": "jest --watch"
   },
