--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "cross-env NODE_ENV=development rollup -c ./build/rollup.config.js --watch",
     "build": "cross-env NODE_ENV=production rollup -c ./build/rollup.config.js",
     "lint": "eslint --ext .js,.jsx --quiet .",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "repository": {
