--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.3.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -25,7 +26,8 @@
     "start": "cross-env NODE_ENV=development rollup -c ./build/rollup.config.js --watch",
     "build": "cross-env NODE_ENV=production rollup -c ./build/rollup.config.js",
     "lint": "eslint --ext .js,.jsx --quiet .",
-    "test": "jest --coverage",
+    "test": "jest",
+    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
     "test:watch": "jest --watch"
   },
   "repository": {
