--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.14.0", 
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.6.0",
@@ -27,7 +27,7 @@
     "build": "cross-env NODE_ENV=production rollup -c ./build/rollup.config.js",
     "lint": "eslint --ext .js,.jsx --quiet .",
     "test": "jest",
-    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "test:watch": "jest --watch"
   },
   "repository": {
