--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled 
-# dist/*
+dist/*
 
 # Dependency directories
 node_modules/
@@ -62,3 +62,5 @@ typings/
 
 # ignore vscode
 .vscode/
+
+.npmrc
