--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,12 @@
 {
-  "extends": ["airbnb"],
+  "extends": ["airbnb-base"],
   "env": {
     "browser": true,
     "jest": true
   },
   "rules": {
     "no-param-reassign": 0,
-    "no-void": 0
+    "no-void": 0,
+    "implicit-arrow-linebreak": 0
   }
 }
